[package]
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
description = 'FRAME pallet template for defining custom runtime logic.'
edition = '2018'
homepage = 'https://substrate.dev'
license = 'Unlicense'
name = 'pallet-ipfs'
repository = 'https://github.com/starkleytech/ipfs-pallets'
version = '2.0.0'


[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.4", default-features = false, features = ["derive"] }

[dependencies.frame-support]
default-features = false
version = "2.0.0"
path = "../../../../frame/support"

[dependencies.frame-system]
default-features = false
version = "2.0.0"
path = "../../../../frame/system"

[dev-dependencies.sp-core]
default-features = false
version = "2.0.0"
path = "../../../../primitives/core"

[dev-dependencies.sp-io]
default-features = false
version = "2.0.0"
path = "../../../../primitives/io"

[dev-dependencies.sp-runtime]
default-features = false
version = "2.0.0"
path = "../../../../primitives/runtime"


[features]
default = ['std']
std = [
	'codec/std',
	'frame-support/std',
	'frame-system/std'
]
