[package]
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
description = 'FRAME pallet template for defining custom runtime logic.'
edition = '2018'
homepage = 'https://substrate.dev'
license = 'Unlicense'
name = 'pallet-ipfs'
repository = 'https://github.com/starkleytech/ipfs-pallets'
version = '2.0.0'


[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
#quote = "1.0.3"
#syn = { version = "1.0.7", features = ["proc-macro" ,"full", "extra-traits", "parsing"] }
alt_serde = { version = "1.0.101", default-features = false,  features = ["derive"] }
codec = { package = "parity-scale-codec", version = "1.3.4", default-features = false, features = ["derive"] }
alt_serde_json = { version = "1.0.61", default-features = false, features = ["alloc"] }


[dependencies.frame-support]
default-features = false
version = "2.0.0"
path = "../../../../frame/support"

[dependencies.frame-system]
default-features = false
version = "2.0.0"
path = "../../../../frame/system"

[dependencies.sp-core]
default-features = false
version = "2.0.0"
path = "../../../../primitives/core"

[dependencies.sp-io]
default-features = false
version = "2.0.0"
path = "../../../../primitives/io"


[dependencies.sp-runtime]
default-features = false
version = "2.0.0"
path = "../../../../primitives/runtime"

[dependencies.sp-std]
default-features = false
version = "2.0.0"
path = "../../../../primitives/std"






[features]
default = ['std']
std = [
]
